feat: add Button component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,26 +14,26 @@
 
   /* Gray scale */
   --color-gray0: #ffffff;
-  --color-gray50: #f3f5f8;   /* screen background */
-  --color-gray100: #e7e9ec;  /* functional element background */
+  --color-gray50: #f3f5f8; /* screen background */
+  --color-gray100: #e7e9ec; /* functional element background */
   --color-gray200: #dbdddf;
   --color-gray300: #c2c4c6;
-  --color-gray400: #aaacae;  /* secondary text, disabled text in button */
+  --color-gray400: #aaacae; /* secondary text, disabled text in button */
   --color-gray500: #929395;
   --color-gray600: #7a7b7c;
-  --color-gray700: #49494a;  /* secondary text, placeholder in button */
+  --color-gray700: #49494a; /* secondary text, placeholder in button */
   --color-gray800: #242525;
-  --color-gray900: #101010;  /* basic text */
+  --color-gray900: #101010; /* basic text */
 
   /* Primary */
-  --color-primary100: #FFE8E3; /* functional element background */
-  --color-primary200: #FFCEC4; /* outline color */
-  --color-primary300: #FF9F8B; /* secondary impact color */
-  --color-primary400: #FF5532; /* primary color */
-  --color-primary500: #F24622; /* text and element on color */
+  --color-primary100: #ffe8e3; /* functional element background */
+  --color-primary200: #ffcec4; /* outline color */
+  --color-primary300: #ff9f8b; /* secondary impact color */
+  --color-primary400: #ff5532; /* primary color */
+  --color-primary500: #f24622; /* text and element on color */
 
   /* Not Specified */
-  --color-tag-text-color : #FB4F2B;
+  --color-tag-text-color: #fb4f2b;
 
   /* Typography scale */
 
