style: clean up component text style and update jsdoc

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,11 +33,11 @@
   --color-primary500: #f24622; /* text and element on color */
 
   /* Status */
-  --color-blue100 : #eff6ff;
-  --color-blue400 : #1375F5;
+  --color-blue100: #eff6ff;
+  --color-blue400: #1375f5;
 
   /* Error */
-  --color-error : #ff2d2d;
+  --color-error: #ff2d2d;
 
   /* Typography scale */
 
