--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,16 @@ html {
 body {
   min-height: 100dvh; /* 동적 뷰포트 지원 */
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
