--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -150,6 +150,9 @@ body {
   --text-caption2-medium--leading: 150%;
   --text-caption2-medium--font-weight: 500;
   --text-caption2-medium--letter-spacing: -1%;
+
+  /* Shadow */
+  --shadow-navigation: 0 4px 12px 0 rgba(0, 0, 0, 0.06);
 }
 
 @media (prefers-color-scheme: dark) {
