feat: update map page ui (#92)
* design: change unselected marker icon

* feat: add StationDropdown

* refactor: change store list query key name

* chore: remove unnecessary file

* feat: adjust bottom sheet height for safe area

* feat: adjust toast viewport position for safe area

* refactor: remove header and set bottom padding to 0

* refactor: separate location and filter buttons and update filter design

* feat: adjust location button bottom for safe area

* chore: sort css properties

* feat: add search header

* feat: adjust floating button for safe area

* feat: fetch store list after map moves on station change

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -150,6 +150,10 @@ body {
   --text-caption2-medium--leading: 150%;
   --text-caption2-medium--font-weight: 500;
   --text-caption2-medium--letter-spacing: -1%;
+
+  /* Shadow */
+  --shadow-navigation: 0 4px 12px 0 rgba(0, 0, 0, 0.06);
+  --shadow-fab: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
 }
 
 @media (prefers-color-scheme: dark) {
